[gd_scene load_steps=9 format=2]

[ext_resource path="res://Objetos/transicionDeEscenas.tscn" type="PackedScene" id=1]
[ext_resource path="res://Objetos/Record.gd" type="Script" id=2]
[ext_resource path="res://Presets/BotonComunTema.tres" type="Theme" id=3]
[ext_resource path="res://Objetos/PanelEstadisticas.tscn" type="PackedScene" id=4]
[ext_resource path="res://Recursos/Sonidos/click2.mp3" type="AudioStream" id=5]

[sub_resource type="DynamicFontData" id=1]
font_path = "res://Recursos/Fuentes/steelfish rg.otf"

[sub_resource type="DynamicFont" id=2]
size = 40
outline_color = Color( 0.141176, 0.109804, 0.109804, 1 )
use_mipmaps = true
use_filter = true
font_data = SubResource( 1 )

[sub_resource type="StyleBoxLine" id=3]
color = Color( 0.435294, 0.262745, 0.141176, 1 )
thickness = 5

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 3 )
script = ExtResource( 2 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color( 0.807843, 0.756863, 0.643137, 1 )

[node name="Buscaminas" type="Label" parent="."]
margin_left = 15.0
margin_top = 13.0
margin_right = 131.0
margin_bottom = 62.0
size_flags_horizontal = 0
size_flags_vertical = 0
size_flags_stretch_ratio = 0.1
custom_colors/font_color = Color( 0.34902, 0.278431, 0.278431, 1 )
custom_constants/shadow_offset_x = 0
custom_constants/line_spacing = 0
custom_fonts/font = SubResource( 2 )
text = "Buscaminas - Records"
align = 1
valign = 1

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
margin_top = 64.0
margin_bottom = 72.0
size_flags_horizontal = 3

[node name="HSeparator" type="HSeparator" parent="MarginContainer"]
margin_right = 800.0
margin_bottom = 8.0
size_flags_horizontal = 3
custom_constants/separation = 8
custom_styles/separator = SubResource( 3 )

[node name="Records" type="MarginContainer" parent="."]
anchor_left = 0.025
anchor_top = 0.148333
anchor_right = 0.9775
anchor_bottom = 0.873333
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": true
}

[node name="HBoxContainer" type="HBoxContainer" parent="Records"]
margin_right = 762.0
margin_bottom = 434.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 7

[node name="PanelFacil" parent="Records/HBoxContainer" instance=ExtResource( 4 )]

[node name="Panelmedio" parent="Records/HBoxContainer" instance=ExtResource( 4 )]
margin_left = 256.0
margin_right = 505.0

[node name="PanelDificil" parent="Records/HBoxContainer" instance=ExtResource( 4 )]
margin_left = 512.0
margin_right = 762.0

[node name="atras" type="Button" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -94.0
margin_top = 5.0
margin_right = -16.0
margin_bottom = 57.0
text = " Atr√°s "

[node name="transicionDeEscenas" parent="." instance=ExtResource( 1 )]

[node name="click_sonido" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
pitch_scale = 1.86

[connection signal="pressed" from="atras" to="." method="_on_atras_pressed"]
